--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^8.18.1",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.6",
     "slugify": "^1.6.6",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.1",
