--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "slugify": "^1.6.6",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.1",
+    "uuid": "^13.0.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
